fixed scrollbar
removed vertical scrollbar and designed it

--- a/src/pages/DoubtPage.module.css
+++ b/src/pages/DoubtPage.module.css
@@ -9,11 +9,12 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: stretch;
-    padding: 5px;
+    padding: 10px;
     gap: 5px;
     height: 100%;
     background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
-    overflow: hidden;
+    
+    
 }
 .leftsidebar {
     display: flex;
@@ -32,8 +33,30 @@
     flex-flow: column nowrap;
     align-items: stretch;
     flex-grow: 1;
+    padding-bottom: 40px;
 }
 .rightsidebarsol {
     width: 100%;
     flex-grow: 0;
 }
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(89, 174, 248);
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
